fix Perl stack in BEGIN, import()